fix [#34104] vertex color: color select bug

changing the hue in a color picker on a panel when black/white was selected would fail because the hue from the previous state wasnt stored.